#230 Follow https://keepachangelog.com/ format
Also introduced the debug mode to allow to test update announcement without doing network call and reading the value from the local file.

--- a/release/changelog
+++ b/release/changelog
@@ -1,3 +1,18 @@
-1.0.1
+# [1.0.2] - 2019-09-21
+## Added
 - Enable new version notification
 - Custom query management
+
+## Changed
+
+## Removed
+
+# [1.0.1] - 2019-09-21
+## Added
+- Enable new version notification
+- Custom query management
+
+## Changed
+
+## Removed
+
